# TradingSystem

./: Package.swift  README.md  build-all.sh  build.sh  oneshot.sh  setup_xcode.sh  setup_xcode_mac.sh
Backend/: CMakeLists.txt
Backend/Include/: Account.hpp  Order.hpp  Position.hpp  trading_bridge.h
Backend/Sources/: Account.cpp  trading_bridge.cpp
Frontend/TradingApp/: ContentView.swift  Info.plist  TradingAppApp.swift  TradingBackend.swift  TradingViewModel.swift  main.swift
